changed optimizers to Adam with b1 = 0.5

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -7250,7 +7250,196 @@
       "Epoch: 12 / 201, Batch: 96 (3104 / 5504), Elapsed time: 141.91 mins\n",
       "Enc Loss = 33.77, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13423.76, dis_Loss = 5.47, dec_Loss = 82.70, Elapsed time: 141.98 mins\n",
       "Memory Use (GB): 1.6266899108886719\n",
-      "Epoch: 12 / 201, Batch: 97 (3136 / 5504), Elapsed time: 141.98 mins\n"
+      "Epoch: 12 / 201, Batch: 97 (3136 / 5504), Elapsed time: 141.98 mins\n",
+      "Enc Loss = 34.65, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13950.45, dis_Loss = 5.17, dec_Loss = 83.23, Elapsed time: 142.05 mins\n",
+      "Memory Use (GB): 1.67816162109375\n",
+      "Epoch: 12 / 201, Batch: 98 (3168 / 5504), Elapsed time: 142.05 mins\n",
+      "Enc Loss = 33.25, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13718.81, dis_Loss = 4.96, dec_Loss = 83.00, Elapsed time: 142.11 mins\n",
+      "Memory Use (GB): 1.6069488525390625\n",
+      "Epoch: 12 / 201, Batch: 99 (3200 / 5504), Elapsed time: 142.11 mins\n",
+      "Enc Loss = 31.79, KL Divergence = 0.18, Reconstruction Loss = 0.09, ll_loss = 14109.09, dis_Loss = 4.84, dec_Loss = 83.39, Elapsed time: 142.18 mins\n",
+      "Memory Use (GB): 1.5834999084472656\n",
+      "Epoch: 12 / 201, Batch: 100 (3232 / 5504), Elapsed time: 142.18 mins\n",
+      "Enc Loss = 35.23, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13532.29, dis_Loss = 5.50, dec_Loss = 82.81, Elapsed time: 142.24 mins\n",
+      "Memory Use (GB): 1.4973106384277344\n",
+      "Epoch: 12 / 201, Batch: 101 (3264 / 5504), Elapsed time: 142.24 mins\n",
+      "Enc Loss = 32.90, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14240.55, dis_Loss = 5.12, dec_Loss = 83.52, Elapsed time: 142.31 mins\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory Use (GB): 1.5776634216308594\n",
+      "Epoch: 12 / 201, Batch: 102 (3296 / 5504), Elapsed time: 142.31 mins\n",
+      "Enc Loss = 38.32, KL Divergence = 0.25, Reconstruction Loss = 0.14, ll_loss = 13598.01, dis_Loss = 5.18, dec_Loss = 82.87, Elapsed time: 142.37 mins\n",
+      "Memory Use (GB): 1.7391815185546875\n",
+      "Epoch: 12 / 201, Batch: 103 (3328 / 5504), Elapsed time: 142.37 mins\n",
+      "Enc Loss = 34.01, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14963.04, dis_Loss = 5.74, dec_Loss = 84.24, Elapsed time: 142.44 mins\n",
+      "Memory Use (GB): 1.6069564819335938\n",
+      "Epoch: 12 / 201, Batch: 104 (3360 / 5504), Elapsed time: 142.44 mins\n",
+      "Enc Loss = 36.31, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14774.70, dis_Loss = 4.33, dec_Loss = 84.05, Elapsed time: 142.50 mins\n",
+      "Memory Use (GB): 1.6368598937988281\n",
+      "Epoch: 12 / 201, Batch: 105 (3392 / 5504), Elapsed time: 142.50 mins\n",
+      "Enc Loss = 34.25, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13663.30, dis_Loss = 5.51, dec_Loss = 82.94, Elapsed time: 142.57 mins\n",
+      "Memory Use (GB): 1.6761817932128906\n",
+      "Epoch: 12 / 201, Batch: 106 (3424 / 5504), Elapsed time: 142.57 mins\n",
+      "Enc Loss = 33.50, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13658.13, dis_Loss = 4.95, dec_Loss = 82.94, Elapsed time: 142.63 mins\n",
+      "Memory Use (GB): 1.6934623718261719\n",
+      "Epoch: 12 / 201, Batch: 107 (3456 / 5504), Elapsed time: 142.63 mins\n",
+      "Enc Loss = 32.64, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 14189.76, dis_Loss = 5.26, dec_Loss = 83.47, Elapsed time: 142.70 mins\n",
+      "Memory Use (GB): 1.7598495483398438\n",
+      "Epoch: 12 / 201, Batch: 108 (3488 / 5504), Elapsed time: 142.70 mins\n",
+      "Enc Loss = 32.83, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13417.79, dis_Loss = 5.16, dec_Loss = 82.69, Elapsed time: 142.76 mins\n",
+      "Memory Use (GB): 1.7655181884765625\n",
+      "Epoch: 12 / 201, Batch: 109 (3520 / 5504), Elapsed time: 142.77 mins\n",
+      "Enc Loss = 34.82, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13227.48, dis_Loss = 5.58, dec_Loss = 82.50, Elapsed time: 142.83 mins\n",
+      "Memory Use (GB): 1.6764755249023438\n",
+      "Epoch: 12 / 201, Batch: 110 (3552 / 5504), Elapsed time: 142.83 mins\n",
+      "Enc Loss = 33.45, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14665.25, dis_Loss = 6.19, dec_Loss = 83.94, Elapsed time: 142.90 mins\n",
+      "Memory Use (GB): 1.6730804443359375\n",
+      "Epoch: 12 / 201, Batch: 111 (3584 / 5504), Elapsed time: 142.90 mins\n",
+      "Enc Loss = 35.40, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14706.10, dis_Loss = 5.79, dec_Loss = 83.98, Elapsed time: 142.96 mins\n",
+      "Memory Use (GB): 1.7533378601074219\n",
+      "Epoch: 12 / 201, Batch: 112 (3616 / 5504), Elapsed time: 142.96 mins\n",
+      "Enc Loss = 33.32, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13644.78, dis_Loss = 4.96, dec_Loss = 82.92, Elapsed time: 143.03 mins\n",
+      "Memory Use (GB): 1.5899848937988281\n",
+      "Epoch: 12 / 201, Batch: 113 (3648 / 5504), Elapsed time: 143.03 mins\n",
+      "Enc Loss = 35.17, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 13700.29, dis_Loss = 5.45, dec_Loss = 82.98, Elapsed time: 143.09 mins\n",
+      "Memory Use (GB): 1.5819282531738281\n",
+      "Epoch: 12 / 201, Batch: 114 (3680 / 5504), Elapsed time: 143.09 mins\n",
+      "Enc Loss = 33.26, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13479.42, dis_Loss = 6.40, dec_Loss = 82.76, Elapsed time: 143.16 mins\n",
+      "Memory Use (GB): 1.5581092834472656\n",
+      "Epoch: 12 / 201, Batch: 115 (3712 / 5504), Elapsed time: 143.16 mins\n",
+      "Enc Loss = 31.89, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 13823.07, dis_Loss = 5.79, dec_Loss = 83.10, Elapsed time: 143.22 mins\n",
+      "Memory Use (GB): 1.5119514465332031\n",
+      "Epoch: 12 / 201, Batch: 116 (3744 / 5504), Elapsed time: 143.22 mins\n",
+      "Enc Loss = 36.49, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 15413.51, dis_Loss = 5.41, dec_Loss = 84.69, Elapsed time: 143.29 mins\n",
+      "Memory Use (GB): 1.6809959411621094\n",
+      "Epoch: 12 / 201, Batch: 117 (3776 / 5504), Elapsed time: 143.29 mins\n",
+      "Enc Loss = 35.82, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14535.08, dis_Loss = 5.16, dec_Loss = 83.81, Elapsed time: 143.35 mins\n",
+      "Memory Use (GB): 1.71417236328125\n",
+      "Epoch: 12 / 201, Batch: 118 (3808 / 5504), Elapsed time: 143.35 mins\n",
+      "Enc Loss = 38.35, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 15541.34, dis_Loss = 5.10, dec_Loss = 84.82, Elapsed time: 143.42 mins\n",
+      "Memory Use (GB): 1.507781982421875\n",
+      "Epoch: 12 / 201, Batch: 119 (3840 / 5504), Elapsed time: 143.42 mins\n",
+      "Enc Loss = 36.41, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 14792.92, dis_Loss = 5.58, dec_Loss = 84.07, Elapsed time: 143.49 mins\n",
+      "Memory Use (GB): 1.5960464477539062\n",
+      "Epoch: 12 / 201, Batch: 120 (3872 / 5504), Elapsed time: 143.49 mins\n",
+      "Enc Loss = 34.89, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14744.46, dis_Loss = 5.52, dec_Loss = 84.02, Elapsed time: 143.55 mins\n",
+      "Memory Use (GB): 1.5508384704589844\n",
+      "Epoch: 12 / 201, Batch: 121 (3904 / 5504), Elapsed time: 143.55 mins\n",
+      "Enc Loss = 37.37, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 15704.98, dis_Loss = 5.17, dec_Loss = 84.98, Elapsed time: 143.62 mins\n",
+      "Memory Use (GB): 1.72845458984375\n",
+      "Epoch: 12 / 201, Batch: 122 (3936 / 5504), Elapsed time: 143.62 mins\n",
+      "Enc Loss = 34.12, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 14265.18, dis_Loss = 5.45, dec_Loss = 83.54, Elapsed time: 143.68 mins\n",
+      "Memory Use (GB): 1.7182426452636719\n",
+      "Epoch: 12 / 201, Batch: 123 (3968 / 5504), Elapsed time: 143.68 mins\n",
+      "Enc Loss = 33.04, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13182.72, dis_Loss = 5.47, dec_Loss = 82.46, Elapsed time: 143.75 mins\n",
+      "Memory Use (GB): 1.6622886657714844\n",
+      "Epoch: 12 / 201, Batch: 124 (4000 / 5504), Elapsed time: 143.75 mins\n",
+      "Enc Loss = 35.53, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14533.19, dis_Loss = 5.09, dec_Loss = 83.81, Elapsed time: 143.82 mins\n",
+      "Memory Use (GB): 1.6775856018066406\n",
+      "Epoch: 12 / 201, Batch: 125 (4032 / 5504), Elapsed time: 143.82 mins\n",
+      "Enc Loss = 34.27, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13845.54, dis_Loss = 6.16, dec_Loss = 83.12, Elapsed time: 143.88 mins\n",
+      "Memory Use (GB): 1.7868499755859375\n",
+      "Epoch: 12 / 201, Batch: 126 (4064 / 5504), Elapsed time: 143.88 mins\n",
+      "Enc Loss = 34.34, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13714.05, dis_Loss = 5.42, dec_Loss = 82.99, Elapsed time: 143.95 mins\n",
+      "Memory Use (GB): 1.46343994140625\n",
+      "Epoch: 12 / 201, Batch: 127 (4096 / 5504), Elapsed time: 143.95 mins\n",
+      "Enc Loss = 35.75, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 14578.72, dis_Loss = 6.37, dec_Loss = 83.86, Elapsed time: 144.01 mins\n",
+      "Memory Use (GB): 1.7656173706054688\n",
+      "Epoch: 12 / 201, Batch: 128 (4128 / 5504), Elapsed time: 144.01 mins\n",
+      "Enc Loss = 33.91, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14300.33, dis_Loss = 5.50, dec_Loss = 83.58, Elapsed time: 144.08 mins\n",
+      "Memory Use (GB): 1.64642333984375\n",
+      "Epoch: 12 / 201, Batch: 129 (4160 / 5504), Elapsed time: 144.08 mins\n",
+      "Enc Loss = 33.09, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 12865.12, dis_Loss = 5.87, dec_Loss = 82.14, Elapsed time: 144.14 mins\n",
+      "Memory Use (GB): 1.5969581604003906\n",
+      "Epoch: 12 / 201, Batch: 130 (4192 / 5504), Elapsed time: 144.14 mins\n",
+      "Enc Loss = 34.43, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 13261.74, dis_Loss = 5.17, dec_Loss = 82.54, Elapsed time: 144.21 mins\n",
+      "Memory Use (GB): 1.6911163330078125\n",
+      "Epoch: 12 / 201, Batch: 131 (4224 / 5504), Elapsed time: 144.21 mins\n",
+      "Enc Loss = 33.47, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 14675.21, dis_Loss = 5.73, dec_Loss = 83.95, Elapsed time: 144.27 mins\n",
+      "Memory Use (GB): 1.6562004089355469\n",
+      "Epoch: 12 / 201, Batch: 132 (4256 / 5504), Elapsed time: 144.27 mins\n",
+      "Enc Loss = 36.25, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14677.05, dis_Loss = 5.69, dec_Loss = 83.95, Elapsed time: 144.34 mins\n",
+      "Memory Use (GB): 1.727996826171875\n",
+      "Epoch: 12 / 201, Batch: 133 (4288 / 5504), Elapsed time: 144.34 mins\n",
+      "Enc Loss = 32.84, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 13537.57, dis_Loss = 5.59, dec_Loss = 82.81, Elapsed time: 144.40 mins\n",
+      "Memory Use (GB): 1.833648681640625\n",
+      "Epoch: 12 / 201, Batch: 134 (4320 / 5504), Elapsed time: 144.40 mins\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enc Loss = 32.51, KL Divergence = 0.19, Reconstruction Loss = 0.11, ll_loss = 13322.16, dis_Loss = 5.49, dec_Loss = 82.60, Elapsed time: 144.47 mins\n",
+      "Memory Use (GB): 1.7119941711425781\n",
+      "Epoch: 12 / 201, Batch: 135 (4352 / 5504), Elapsed time: 144.47 mins\n",
+      "Enc Loss = 34.64, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 13467.49, dis_Loss = 5.25, dec_Loss = 82.74, Elapsed time: 144.54 mins\n",
+      "Memory Use (GB): 1.6591453552246094\n",
+      "Epoch: 12 / 201, Batch: 136 (4384 / 5504), Elapsed time: 144.54 mins\n",
+      "Enc Loss = 32.16, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 12823.88, dis_Loss = 5.83, dec_Loss = 82.10, Elapsed time: 144.60 mins\n",
+      "Memory Use (GB): 1.6103706359863281\n",
+      "Epoch: 12 / 201, Batch: 137 (4416 / 5504), Elapsed time: 144.60 mins\n",
+      "Enc Loss = 33.54, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13886.68, dis_Loss = 5.73, dec_Loss = 83.16, Elapsed time: 144.67 mins\n",
+      "Memory Use (GB): 1.6063880920410156\n",
+      "Epoch: 12 / 201, Batch: 138 (4448 / 5504), Elapsed time: 144.67 mins\n",
+      "Enc Loss = 38.51, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 16062.98, dis_Loss = 5.14, dec_Loss = 85.34, Elapsed time: 144.73 mins\n",
+      "Memory Use (GB): 1.7421073913574219\n",
+      "Epoch: 12 / 201, Batch: 139 (4480 / 5504), Elapsed time: 144.73 mins\n",
+      "Enc Loss = 33.94, KL Divergence = 0.20, Reconstruction Loss = 0.12, ll_loss = 13523.65, dis_Loss = 5.40, dec_Loss = 82.80, Elapsed time: 144.80 mins\n",
+      "Memory Use (GB): 1.6151847839355469\n",
+      "Epoch: 12 / 201, Batch: 140 (4512 / 5504), Elapsed time: 144.80 mins\n",
+      "Enc Loss = 34.07, KL Divergence = 0.19, Reconstruction Loss = 0.10, ll_loss = 15308.50, dis_Loss = 4.92, dec_Loss = 84.59, Elapsed time: 144.86 mins\n",
+      "Memory Use (GB): 1.77447509765625\n",
+      "Epoch: 12 / 201, Batch: 141 (4544 / 5504), Elapsed time: 144.86 mins\n",
+      "Enc Loss = 34.87, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14518.50, dis_Loss = 6.01, dec_Loss = 83.80, Elapsed time: 144.93 mins\n",
+      "Memory Use (GB): 1.7909622192382812\n",
+      "Epoch: 12 / 201, Batch: 142 (4576 / 5504), Elapsed time: 144.93 mins\n",
+      "Enc Loss = 34.79, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 14529.08, dis_Loss = 5.09, dec_Loss = 83.81, Elapsed time: 144.99 mins\n",
+      "Memory Use (GB): 1.6562767028808594\n",
+      "Epoch: 12 / 201, Batch: 143 (4608 / 5504), Elapsed time: 144.99 mins\n",
+      "Enc Loss = 35.63, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14868.88, dis_Loss = 5.70, dec_Loss = 84.15, Elapsed time: 145.06 mins\n",
+      "Memory Use (GB): 1.7740745544433594\n",
+      "Epoch: 12 / 201, Batch: 144 (4640 / 5504), Elapsed time: 145.06 mins\n",
+      "Enc Loss = 37.41, KL Divergence = 0.21, Reconstruction Loss = 0.12, ll_loss = 16400.12, dis_Loss = 5.45, dec_Loss = 85.68, Elapsed time: 145.12 mins\n",
+      "Memory Use (GB): 1.6503753662109375\n",
+      "Epoch: 12 / 201, Batch: 145 (4672 / 5504), Elapsed time: 145.13 mins\n",
+      "Enc Loss = 35.03, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 14014.17, dis_Loss = 5.33, dec_Loss = 83.29, Elapsed time: 145.19 mins\n",
+      "Memory Use (GB): 1.7355499267578125\n",
+      "Epoch: 12 / 201, Batch: 146 (4704 / 5504), Elapsed time: 145.19 mins\n",
+      "Enc Loss = 35.40, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 13363.75, dis_Loss = 5.49, dec_Loss = 82.64, Elapsed time: 145.26 mins\n",
+      "Memory Use (GB): 1.6590690612792969\n",
+      "Epoch: 12 / 201, Batch: 147 (4736 / 5504), Elapsed time: 145.26 mins\n",
+      "Enc Loss = 36.03, KL Divergence = 0.22, Reconstruction Loss = 0.11, ll_loss = 14443.18, dis_Loss = 5.12, dec_Loss = 83.72, Elapsed time: 145.33 mins\n",
+      "Memory Use (GB): 1.685394287109375\n",
+      "Epoch: 12 / 201, Batch: 148 (4768 / 5504), Elapsed time: 145.33 mins\n",
+      "Enc Loss = 35.74, KL Divergence = 0.23, Reconstruction Loss = 0.12, ll_loss = 13078.55, dis_Loss = 6.09, dec_Loss = 82.36, Elapsed time: 145.39 mins\n",
+      "Memory Use (GB): 1.6706275939941406\n",
+      "Epoch: 12 / 201, Batch: 149 (4800 / 5504), Elapsed time: 145.39 mins\n",
+      "Enc Loss = 32.54, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 14240.67, dis_Loss = 5.16, dec_Loss = 83.52, Elapsed time: 145.46 mins\n",
+      "Memory Use (GB): 1.79461669921875\n",
+      "Epoch: 12 / 201, Batch: 150 (4832 / 5504), Elapsed time: 145.46 mins\n",
+      "Enc Loss = 33.30, KL Divergence = 0.20, Reconstruction Loss = 0.11, ll_loss = 13009.22, dis_Loss = 6.15, dec_Loss = 82.29, Elapsed time: 145.52 mins\n",
+      "Memory Use (GB): 1.7197341918945312\n",
+      "Epoch: 12 / 201, Batch: 151 (4864 / 5504), Elapsed time: 145.52 mins\n",
+      "Enc Loss = 35.44, KL Divergence = 0.22, Reconstruction Loss = 0.12, ll_loss = 13065.98, dis_Loss = 6.40, dec_Loss = 82.34, Elapsed time: 145.59 mins\n",
+      "Memory Use (GB): 1.668548583984375\n",
+      "Epoch: 12 / 201, Batch: 152 (4896 / 5504), Elapsed time: 145.59 mins\n",
+      "Enc Loss = 31.09, KL Divergence = 0.18, Reconstruction Loss = 0.10, ll_loss = 12903.44, dis_Loss = 6.40, dec_Loss = 82.18, Elapsed time: 145.65 mins\n",
+      "Memory Use (GB): 1.6436233520507812\n",
+      "Epoch: 12 / 201, Batch: 153 (4928 / 5504), Elapsed time: 145.65 mins\n",
+      "Enc Loss = 31.28, KL Divergence = 0.17, Reconstruction Loss = 0.10, ll_loss = 14048.06, dis_Loss = 5.11, dec_Loss = 83.33, Elapsed time: 145.72 mins\n",
+      "Memory Use (GB): 1.7418670654296875\n",
+      "Epoch: 12 / 201, Batch: 154 (4960 / 5504), Elapsed time: 145.72 mins\n",
+      "Enc Loss = 34.04, KL Divergence = 0.21, Reconstruction Loss = 0.11, ll_loss = 12801.32, dis_Loss = 5.22, dec_Loss = 82.08, Elapsed time: 145.78 mins\n",
+      "Memory Use (GB): 1.6577224731445312\n",
+      "Epoch: 12 / 201, Batch: 155 (4992 / 5504), Elapsed time: 145.78 mins\n",
+      "Enc Loss = 34.81, KL Divergence = 0.20, Reconstruction Loss = 0.10, ll_loss = 14780.82, dis_Loss = 5.25, dec_Loss = 84.06, Elapsed time: 145.85 mins\n",
+      "Memory Use (GB): 1.7021751403808594\n",
+      "Epoch: 12 / 201, Batch: 156 (5024 / 5504), Elapsed time: 145.85 mins\n"
      ]
     }
    ],
