enlarged final discriminator layer to 1024

--- a/notebooks/experiment_review.ipynb
+++ b/notebooks/experiment_review.ipynb
@@ -748,11 +748,12 @@
     "vaegan_decent_toilets_21 = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-17_08-40-29'\n",
     "vaegan_long_toilets = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-18_13-12-53'\n",
     "vaegan_new_losses = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-19_19-31-20'\n",
+    "vaegan_1024_filter_discr = '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-20_09-39-05/'\n",
     "\n",
     "# model to use for reconstruction\n",
-    "model_root = vaegan_new_losses\n",
+    "model_root = vaegan_1024_filter_discr\n",
     "model_cfg = read_json_data(os.path.join(model_root, 'cfg.json'))\n",
-    "model_ckpt = os.path.join(model_root, 'model_epoch-19.ckpt')\n",
+    "model_ckpt = os.path.join(model_root, 'model_epoch-39.ckpt')\n",
     "\n",
     "# restore the model from ckpt\n",
     "vaegan = VoxelVaegan.initFromCfg(model_cfg)\n",
