added d_layers list to preserve d layers

--- a/notebooks/experiment_review.ipynb
+++ b/notebooks/experiment_review.ipynb
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -812,20 +812,26 @@
      "text": [
       "discriminator_op: Tensor(\"discriminator_2/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
       "d input:  0.6652868\n",
-      "discriminator_op: Tensor(\"discriminator/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
-      "d input:  0.6658822\n",
-      "discriminator_op: Tensor(\"discriminator_1/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
-      "d input:  0.66589725\n",
       "discriminator_op: Tensor(\"discriminator_2/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
-      "d recon:  0.66590047\n",
-      "max:  0.50412697\n",
-      "min:  3.0975165e-21\n",
-      "mean:  0.024509221\n"
+      "d input:  0.6652868\n",
+      "discriminator_op: Tensor(\"discriminator_2/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
+      "d input:  0.6652868\n",
+      "discriminator_op: Tensor(\"discriminator/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
+      "d input:  0.6658796\n",
+      "discriminator_op: Tensor(\"discriminator_1/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
+      "d input:  0.6658965\n",
+      "discriminator_op: Tensor(\"discriminator_2/Sigmoid:0\", shape=(?, 1), dtype=float32)\n",
+      "d recon:  0.66588616\n",
+      "max:  0.50920635\n",
+      "min:  2.4033665e-20\n",
+      "mean:  0.020147828\n"
      ]
     }
    ],
    "source": [
     "recon = vaegan.reconstruct(training_example)\n",
+    "print('d input: ', vaegan.discriminate(training_example, discriminator_op=vaegan.d_x_real))\n",
+    "print('d input: ', vaegan.discriminate(training_example, discriminator_op=vaegan.d_x_real))\n",
     "print('d input: ', vaegan.discriminate(training_example, discriminator_op=vaegan.d_x_real))\n",
     "print('d input: ', vaegan.discriminate(training_example, discriminator_op=vaegan.d_x_noise))\n",
     "print('d input: ', vaegan.discriminate(training_example, discriminator_op=vaegan.d_x_vae))\n",
