added ability to filter modelnet10 index by categories; started ttraining vae on bathtub and toilet sets

--- a/notebooks/ModelNet10.ipynb
+++ b/notebooks/ModelNet10.ipynb
@@ -2069,6 +2069,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filtering Index File By Category"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78368"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import env\n",
+    "from data import MODELNET10_INDEX\n",
+    "from data.modelnet10 import ModelNet10\n",
+    "ModelNet = ModelNet10.initFromIndex(MODELNET10_INDEX)\n",
+    "len(ModelNet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9600"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "toilets = len(ModelNet.df[ModelNet.df.category == 'toilet'])\n",
+    "bathtubs = len(ModelNet.df[ModelNet.df.category == 'bathtub'])\n",
+    "toilets + bathtubs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9600"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ModelNet.filter_categories(['bathtub', 'toilet'])\n",
+    "len(ModelNet)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
