--- a/notebooks/experiment_review.ipynb
+++ b/notebooks/experiment_review.ipynb
@@ -1229,23 +1229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-03-26 15:34:49,796 - DEBUG - voxel_vaegan: Epoch: 200 / 201, Batch: 37 (4864 / 5504), Elapsed time: 624.61 mins\r\n",
-      "2019-03-26 15:34:54,077 - INFO - voxel_vaegan: Enc Loss = 96.58, KL Divergence = 244.57, Reconstruction Loss = 0.01, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 624.68 mins\r\n",
-      "2019-03-26 15:34:54,080 - INFO - voxel_vaegan: Memory Use (GB): 3.6983909606933594\r\n",
-      "2019-03-26 15:34:54,143 - DEBUG - voxel_vaegan: Epoch: 200 / 201, Batch: 38 (4992 / 5504), Elapsed time: 624.69 mins\r\n",
-      "2019-03-26 15:34:58,319 - INFO - voxel_vaegan: Enc Loss = 100.12, KL Divergence = 255.91, Reconstruction Loss = 0.01, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 624.75 mins\r\n",
-      "2019-03-26 15:34:58,321 - INFO - voxel_vaegan: Memory Use (GB): 3.735614776611328\r\n",
-      "2019-03-26 15:34:58,386 - DEBUG - voxel_vaegan: Epoch: 200 / 201, Batch: 39 (5120 / 5504), Elapsed time: 624.76 mins\r\n",
-      "2019-03-26 15:35:02,679 - INFO - voxel_vaegan: Enc Loss = 97.23, KL Divergence = 257.86, Reconstruction Loss = 0.01, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 624.83 mins\r\n",
-      "2019-03-26 15:35:02,681 - INFO - voxel_vaegan: Memory Use (GB): 3.6763343811035156\r\n",
-      "2019-03-26 15:35:02,744 - DEBUG - voxel_vaegan: Epoch: 200 / 201, Batch: 40 (5248 / 5504), Elapsed time: 624.83 mins\r\n"
+      "2019-03-26 15:35:15,459 - INFO - voxel_vaegan: Memory Use (GB): 3.6546974182128906\r\n",
+      "2019-03-26 15:35:15,461 - INFO - voxel_vaegan: Enc Loss = 96.32, KL Divergence = 244.25, Reconstruction Loss = 0.01, ll_loss = -999.00, dis_Loss = -999.00, dec_Loss = -999.00, Elapsed time: 625.04 mins\r\n",
+      "2019-03-26 15:35:17,696 - INFO - voxel_vaegan: Model saved in path: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-26_05-10-08/model_epoch-_end.ckpt\r\n",
+      "2019-03-26 15:35:17,713 - INFO - voxel_vaegan: Metrics saved in path: /home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-26_05-10-08/metrics.json\r\n",
+      "2019-03-26 15:35:17,713 - INFO - train_vaegan: Saved final checkpoint\r\n",
+      "2019-03-26 15:35:17,714 - INFO - train_vaegan: Did not save experiment metrics\r\n",
+      "2019-03-26 15:35:17,715 - INFO - train_vaegan: Done train_vaegan.py main\r\n",
+      "2019-03-26 15:35:17,716 - DEBUG - captured_function: Finished after 10:25:10.\r\n",
+      "2019-03-26 15:35:17,717 - INFO - run: Completed after 10:25:10\r\n",
+      "2019-03-26 15:35:18,721 - DEBUG - run: Stopping Heartbeat\r\n"
      ]
     }
    ],
