full modelnet10 dataset training is underway

--- a/notebooks/ModelNet10.ipynb
+++ b/notebooks/ModelNet10.ipynb
@@ -2101,16 +2101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num toilets =  7104\n",
+      "num bathtubs =  2496\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "9600"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2126,42 @@
    "source": [
     "toilets = len(ModelNet.df[ModelNet.df.category == 'toilet'])\n",
     "bathtubs = len(ModelNet.df[ModelNet.df.category == 'bathtub'])\n",
+    "print('num toilets = ', toilets)\n",
+    "print('num bathtubs = ', bathtubs)\n",
     "toilets + bathtubs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_toilets= 5504\n",
+      "test_toilets= 1600\n",
+      "train_bathtubs= 1696\n",
+      "test_bathtubs= 800\n",
+      "\n",
+      "train= 7200\n",
+      "test= 2400\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_toilets = len(ModelNet.df[(ModelNet.df.category == 'toilet') & (ModelNet.df.dataset == 'train')])\n",
+    "print('train_toilets=', train_toilets)\n",
+    "test_toilets = len(ModelNet.df[(ModelNet.df.category == 'toilet') & (ModelNet.df.dataset == 'test')])\n",
+    "print('test_toilets=', test_toilets)\n",
+    "train_bathtubs = len(ModelNet.df[(ModelNet.df.category == 'bathtub') & (ModelNet.df.dataset == 'train')])\n",
+    "print('train_bathtubs=', train_bathtubs)\n",
+    "test_bathtubs = len(ModelNet.df[(ModelNet.df.category == 'bathtub') & (ModelNet.df.dataset == 'test')])\n",
+    "print('test_bathtubs=', test_bathtubs)\n",
+    "print()\n",
+    "print('train=', train_toilets + train_bathtubs)\n",
+    "print('test=', test_toilets + test_bathtubs)"
    ]
   },
   {
@@ -2147,7 +2190,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ModelNet."
+   ]
   }
  ],
  "metadata": {
