--- a/notebooks/voxel_gan_mashup_ModelNet_jack.ipynb
+++ b/notebooks/voxel_gan_mashup_ModelNet_jack.ipynb
@@ -990,6 +990,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Variable 'encoder/conv3d/kernel:0' shape=(3, 3, 3, 1, 8) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d/bias:0' shape=(8,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization/gamma:0' shape=(8,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization/beta:0' shape=(8,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_1/kernel:0' shape=(3, 3, 3, 8, 16) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_1/bias:0' shape=(16,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_1/gamma:0' shape=(16,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_1/beta:0' shape=(16,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_2/kernel:0' shape=(3, 3, 3, 16, 32) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_2/bias:0' shape=(32,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_2/gamma:0' shape=(32,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_2/beta:0' shape=(32,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_3/kernel:0' shape=(3, 3, 3, 32, 64) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/conv3d_3/bias:0' shape=(64,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_3/gamma:0' shape=(64,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_3/beta:0' shape=(64,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense/kernel:0' shape=(64, 343) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense/bias:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_4/gamma:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_4/beta:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense_1/kernel:0' shape=(117649, 350) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense_1/bias:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_5/gamma:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_5/beta:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense_2/kernel:0' shape=(117649, 350) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/dense_2/bias:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_6/gamma:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'encoder/batch_normalization_6/beta:0' shape=(350,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_dense1/kernel:0' shape=(350, 343) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_dense1/bias:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization/gamma:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization/beta:0' shape=(343,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_conv1/kernel:0' shape=(3, 3, 3, 64, 1) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_1/gamma:0' shape=(64,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_1/beta:0' shape=(64,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_conv2/kernel:0' shape=(3, 3, 3, 32, 64) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_2/gamma:0' shape=(32,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_2/beta:0' shape=(32,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_conv3/kernel:0' shape=(3, 3, 3, 16, 32) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_3/gamma:0' shape=(16,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_3/beta:0' shape=(16,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_conv4/kernel:0' shape=(4, 4, 4, 8, 16) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_4/gamma:0' shape=(8,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/batch_normalization_4/beta:0' shape=(8,) dtype=float32_ref>,\n",
+       " <tf.Variable 'generator/dec_conv5/kernel:0' shape=(3, 3, 3, 1, 8) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/conv3d/kernel:0' shape=(4, 4, 4, 1, 128) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/conv3d_1/kernel:0' shape=(4, 4, 4, 128, 256) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/batch_normalization/gamma:0' shape=(256,) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/batch_normalization/beta:0' shape=(256,) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/conv3d_2/kernel:0' shape=(4, 4, 4, 256, 512) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/batch_normalization_1/gamma:0' shape=(512,) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/batch_normalization_1/beta:0' shape=(512,) dtype=float32_ref>,\n",
+       " <tf.Variable 'discriminator/conv3d_3/kernel:0' shape=(4, 4, 4, 512, 1) dtype=float32_ref>,\n",
+       " <tf.Variable 'Variable:0' shape=(32, 32, 32, 1) dtype=float32_ref>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.trainable_variables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensorflow.python.framework.ops.Operation"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(vae.D_optim_mashup)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
