added some stats to demos notebook

--- a/notebooks/demos.ipynb
+++ b/notebooks/demos.ipynb
@@ -18,7 +18,13 @@
     "1. 32x32x32 is too small to capture great granularity but greater resolution leads to excessive training times\n",
     "2. Model is currently just a VAE; GAN outsmarted us\n",
     "3. GAN-less solution yields blurry edges\n",
-    "4. Convolution layer size misses gaps in shapes"
+    "4. Convolution layer size misses gaps in shapes\n",
+    "5. \n",
+    "\n",
+    "Stats -\n",
+    "\n",
+    "1. Model Training Time - 4 days, 10 hours\n",
+    "2. Objects in dataset - 70k+\n"
    ]
   },
   {
